Minor scene changes to test new scripts

--- a/Unity Free Flight/Assembly-CSharp-Editor-vs.csproj
+++ b/Unity Free Flight/Assembly-CSharp-Editor-vs.csproj
@@ -5,11 +5,11 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{DBDB291A-44FA-CFDA-8D22-F95EC0051BA0}</ProjectGuid>
+	<ProjectGuid>{E37CA806-4A31-C382-1CCF-3A3E005AA923}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<AssemblyName>Assembly-CSharp-Editor</AssemblyName>
 	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
 	<FileAlignment>512</FileAlignment>
 	<BaseDirectory>Assets</BaseDirectory>
@@ -46,13 +46,25 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\UnityFreeFlight\scripts\FlightBody.cs" />
-     <Compile Include="Assets\UnityFreeFlight\scripts\model\ExposeProperties.cs" />
-     <Compile Include="Assets\UnityFreeFlight\scripts\model\ExposePropertyAttribute.cs" />
-     <Compile Include="Assets\UnityFreeFlight\scripts\model\MyType.cs" />
-     <Compile Include="Assets\UnityFreeFlight\scripts\model\flightPhysics.cs" />
-     <Compile Include="Assets\UnityFreeFlight\scripts\simpleflight.cs" />
+     <Compile Include="Assets\Editor\FlightBodyInspector.cs" />
+     <Compile Include="Assets\Editor\MyTypeEditor.cs" />
      <None Include="Assets\UnityFreeFlight\scripts\model\README.txt" />
+ <Reference Include="\Applications\Unity\Unity.app\Contents\Frameworks\Managed\UnityEditor.Graphs">
+ <HintPath>\Applications\Unity\Unity.app\Contents\Frameworks\Managed\UnityEditor.Graphs.dll</HintPath>
+ </Reference>
+ <Reference Include="\Applications\Unity\Unity.app\Contents\PlaybackEngines\iPhonePlayer\EditorExtensions\UnityEditor.iOS.Extensions">
+ <HintPath>\Applications\Unity\Unity.app\Contents\PlaybackEngines\iPhonePlayer\EditorExtensions\UnityEditor.iOS.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="\Applications\Unity\Unity.app\Contents\PlaybackEngines\BB10Player\EditorExtensions\UnityEditor.BB10.Extensions">
+ <HintPath>\Applications\Unity\Unity.app\Contents\PlaybackEngines\BB10Player\EditorExtensions\UnityEditor.BB10.Extensions.dll</HintPath>
+ </Reference>
+ <Reference Include="\Applications\Unity\Unity.app\Contents\PlaybackEngines\AndroidPlayer\EditorExtensions\UnityEditor.Android.Extensions">
+ <HintPath>\Applications\Unity\Unity.app\Contents\PlaybackEngines\AndroidPlayer\EditorExtensions\UnityEditor.Android.Extensions.dll</HintPath>
+ </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-vs.csproj">
+      <Project>{DBDB291A-44FA-CFDA-8D22-F95EC0051BA0}</Project>      <Name>Assembly-CSharp-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
